# syslog

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  lib.rs
examples/: syslog-unix.rs
src/: adapter.rs  builder.rs  config.rs  drain.rs  facility.rs  format.rs  level.rs  lib.rs  mock.rs  priority.rs  tests.rs
tests/: test.rs
