[package]
name = "slog-syslog"
version = "0.13.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>", "William Laeder <codylaeder@gmail.com" ]
description = "Syslog drain for slog-rs"
keywords = ["slog", "logging", "json", "log", "syslog"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-syslog"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/syslog"
readme = "README.md"

[dependencies]
lazy_static = "1"
libc = "0.2"
serde = { version = "1.0.85", optional = true, features = ["derive"] }
slog = "^2.1.1"

[dev-dependencies]
toml = "0.4"

[package.metadata.docs.rs]
all-features = true
