[package]
name = "slog-syslog"
version = "0.13.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>", "William Laeder <codylaeder@gmail.com" ]
description = "Syslog drain for slog-rs"
keywords = ["slog", "logging", "json", "log", "syslog"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-rs/term"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/syslog"
readme = "README.md"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
slog = "^2.1.1"
syslog = "5.0"
